# pinhole

./: .editorconfig  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.devcontainer/: README.md  ci.docker-compose.yml  ci.server.Dockerfile  ci.server.two_stage.Dockerfile  devcontainer.json  local.docker-compose.yml  local.server.Dockerfile  server.Dockerfile
.github/workflows/: build-deploy-dev.yml  build-deploy.yml  rust.yml
cicd/: README.md  server.Cargo.toml  template.build-deploy.yml
client/: Cargo.toml  README.md
client/src/: app.rs  ascii_converter.rs  ascii_renderer.rs  camera.rs  client.rs  edge_detector.rs  ffmpeg.rs  frontend.rs  image_frame.rs  main copy.rs  main.rs  mock_frame_generator.rs  network.rs  video_config.rs
client/src/ui/: main_menu.rs  mod.rs  stats.rs  user_list.rs  utils.rs
common/: Cargo.toml  README.md
common/src/: ascii_frame.rs  lib.rs  logger.rs  protocol.rs
scripts/: analyze_logs.sh  build-release-dev.sh  build-release.sh  get-active-sessions.sh
server/: Cargo.toml  README.md
server/src/: main.rs  server.rs  sessions.rs  sfu.rs
src/: main.rs
