[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["Group 4"]
repository = "https://github.com/csi4321/final-project-group4_s25"
description = "Client for terminal-based video call service with ASCII streaming"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
local-ip-address = "0.5.3"


[[bin]]
name = "client"
