[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Group 4"]
repository = "https://github.com/csi4321/final-project-group4_s25"
description = "Server for terminal-based video call service with QUIC relaying"

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
common = { path = "../common" }
tokio = { version = "1", features = ["full"] }

[[bin]]
name = "server"
