[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Group 4"]
repository = "https://github.com/csi4321/final-project-group4_s25"
description = "Server for terminal-based video call service with QUIC relaying"

[dependencies]
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
common = { path = "../common" }
quinn = "0.11"
etherparse = "0.15.0"
clap = "4.5.9"
tokio = { version = "1.38.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["full"] }
tokio-stream = { version = "0.1" }
tokio-core = "0.1.18"
futures = { version = "0.3.0", features = ["thread-pool"] }
strum = "0.26.3"
strum_macros = "0.26.4"
# tokio-tun = "0.11.5"
thiserror = "1.0.63"
rand = "0.8.5"
bitflags = "2.9.0"
socket2 = "0.5.8"
tracing-subscriber = "0.3.19"
rcgen = "0.13.2"
log = "0.4.27"

[target.'cfg(target_os = "linux")'.dependencies]
tokio-tun = "0.11.5"

# [dev-dependencies]
# tempfile.workspace = true
# mockall.workspace = true

[[bin]]
name = "server"
