[package]
name = "server"
version = "0.1.0"
edition = "2024"
authors = ["Group 4"]
repository = "https://github.com/csi4321/final-project-group4_s25"
description = "Server for terminal-based video call service with QUIC relaying"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
tokio-tun = "0.11.5"

# [dev-dependencies]
# tempfile.workspace = true
# mockall.workspace = true

[[bin]]
name = "server"
